# paddletools

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  PROJECT_OVERVIEW.md  README.md  ppocr_local_labeler_complete_plan.md  pytest.ini  requirements.txt  run_labeler.py  ui.md
model/: ppocr.md
qml/: AnnotationCanvas.qml
resources/: app.qrc
resources/qss/: components.qss  dark.qss  tokens.qss
resources/training_tasks/: det_v4_mobile.json  det_v4_server.json  det_v5_mobile.json  det_v5_server.json  doc_ori_x1.json  layout_block.json  layout_l.json  layout_m.json  layout_plus_l.json  layout_s.json  rec_v4_mobile.json  rec_v4_mobile_en.json  rec_v4_server.json  rec_v4_server_doc.json  rec_v5_mobile.json  rec_v5_server.json  table_cls_x1.json  textline_ori_x025.json  textline_ori_x1.json  uvdoc.json
scripts/: bootstrap_paddlex_py312.ps1  download_table_cls_model.ps1  package_workbench.ps1  qt_opencv_env.ps1  verify_cpp_workbench.ps1
src/app/: MainWindow.cpp  MainWindow.h  MainWindowInternal.h  main.cpp
src/app/controllers/: AnnotationController.cpp  AnnotationController.h  DatasetController.cpp  DatasetController.h  ModelLibraryController.cpp  ModelLibraryController.h  PredictionController.cpp  PredictionController.h  ProjectController.cpp  ProjectController.h  TrainingController.cpp  TrainingController.h
src/app/widgets/: MainWindowAnnotationUi.cpp  MainWindowPages.cpp  MainWindowPredictionUi.cpp  MainWindowProjectDataset.cpp  MainWindowTrainingUi.cpp
src/application/: AnnotationService.cpp  AnnotationService.h  DatasetService.cpp  DatasetService.h  EnvironmentService.cpp  EnvironmentService.h  ExportService.cpp  ExportService.h  InferenceService.cpp  InferenceService.h  ModelRegistryService.cpp  ModelRegistryService.h  PredictionService.cpp  PredictionService.h  ProjectService.cpp  ProjectService.h  TrainingService.cpp  TrainingService.h
src/compat/: dirent.h  unistd.h
src/core/: AnnotationOps.cpp  AnnotationOps.h  AssetImporter.cpp  AssetImporter.h  ClassificationPrelabeler.cpp  ClassificationPrelabeler.h  Constants.h  CropGenerator.cpp  CropGenerator.h  DatasetExportPlanner.cpp  DatasetExportPlanner.h  DatasetExporter.cpp  DatasetExporter.h  EnvironmentReport.cpp  EnvironmentReport.h  Exporter.cpp  Exporter.h  JsonUtils.h  LayoutPrelabeler.cpp  LayoutPrelabeler.h  OcrPrelabeler.cpp  OcrPrelabeler.h  ProjectRepository.cpp  ProjectRepository.h  ProjectTypes.cpp  ProjectTypes.h  RuntimePaths.cpp  RuntimePaths.h  TrainingCommandBuilder.cpp  TrainingCommandBuilder.h  TrainingOptions.h  TrainingPreflight.cpp  TrainingPreflight.h  TrainingRunStore.cpp  TrainingRunStore.h  TrainingRunner.cpp  TrainingRunner.h  TrainingTasks.cpp  TrainingTasks.h  Validator.cpp  (+1 more)
src/domain/: Annotation.h  Dataset.h  Error.h  ModelVersion.h  Page.h  PredictionJob.h  Project.h  ProjectTypes.cpp  ProjectTypes.h  Region.h  Result.h  TrainingRun.h  TrainingTask.h
src/infrastructure/: EnvironmentDetector.cpp  EnvironmentDetector.h  FileSystem.cpp  FileSystem.h  JsonStore.cpp  JsonStore.h  Logger.cpp  Logger.h  ProcessRunner.h
src/paddle/: PaddleClsEngine.cpp  PaddleClsEngine.h  PaddleDocLayoutEngine.cpp  PaddleDocLayoutEngine.h  PaddleInferenceRuntime.cpp  PaddleInferenceRuntime.h  PaddleOcrEngine.cpp  PaddleOcrEngine.h  PaddleProcess.cpp  PaddleProcess.h
tests/: test_core_workflow.py
tests/cpp/: test_annotation_controller.cpp  test_application_services.cpp  test_architecture_boundaries.cpp  test_core_workflow.cpp  test_dataset_controller.cpp  test_prediction_controller.cpp  test_training_controller.cpp
tests/fakes/: FakeTrainingRunner.cpp  FakeTrainingRunner.h
tools/: ppocr_cls_predict.cpp  ppocr_env_check.cpp  ppocr_infer_smoke.cpp  ppocr_layout_predict.cpp  ppocr_ocr_predict.cpp  ppocr_training_preflight.cpp  ppocr_training_run.cpp  ppocr_workflow_smoke.cpp
